Fix strings to correctly end with \n

--- a/po/de.po
+++ b/po/de.po
@@ -608,7 +608,7 @@ msgstr "alle"
 #: ../src/main.c:74 ../src/print.c:405
 #, c-format
 msgid "Could not find interface definition file: %s\n"
-msgstr "Konnte Interface-Definitionsdatei nicht finden: %s"
+msgstr "Konnte Interface-Definitionsdatei nicht finden: %s\n"
 
 #: ../src/main.c:81 ../src/print.c:413
 #, c-format
