--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.15) upstream; urgency=medium
+
+  * Adapt glib-genmarshal call to new syntax.
+
+ -- Christoph Berg <myon@debian.org>  Thu, 17 Aug 2017 21:18:09 +0200
+
 tenace (0.14) upstream; urgency=medium
 
   * Correctly read lin files starting with qx||.
