--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tenace (0.15-1) unstable; urgency=medium
+
+  * New upstream version.
+    + Adapt glib-genmarshal call to new syntax. Closes: #871082.
+
+ -- Christoph Berg <myon@debian.org>  Thu, 17 Aug 2017 21:17:37 +0200
+
 tenace (0.14-1) unstable; urgency=medium
 
   * New upstream version.
