--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.16) UNRELEASED; urgency=medium
+
+  * Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
+
+ -- Christoph Berg <myon@debian.org>  Sat, 22 Sep 2018 22:35:58 +0200
+
 tenace (0.15) upstream; urgency=medium
 
   * Adapt glib-genmarshal call to new syntax.
