--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tenace (0.16-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+    + Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
+
+ -- Christoph Berg <myon@debian.org>  Sat, 22 Sep 2018 22:35:05 +0200
+
 tenace (0.15-1) unstable; urgency=medium
 
   * New upstream version.
