--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-tenace (0.16) UNRELEASED; urgency=medium
+tenace (0.16) upstream; urgency=medium
 
   * Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
   * Fix handling of board numbers in menu callback.
 
- -- Christoph Berg <myon@debian.org>  Sat, 22 Sep 2018 22:35:58 +0200
+ -- Christoph Berg <myon@debian.org>  Sun, 23 Sep 2018 15:04:09 +0200
 
 tenace (0.15) upstream; urgency=medium
 
