--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tenace (0.16-2) UNRELEASED; urgency=medium
+
+  [ Helmut Grohne ]
+  * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure. (Closes: #923147)
+
+ -- Helmut Grohne <helmut@subdivi.de>  Sun, 24 Feb 2019 13:21:28 +0100
+
 tenace (0.16-1) unstable; urgency=medium
 
   * New upstream version.
