--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tenace (0.16-2) UNRELEASED; urgency=medium
+tenace (0.16-2) unstable; urgency=medium
 
   [ Helmut Grohne ]
   * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure. (Closes: #923147)
@@ -6,7 +6,7 @@ tenace (0.16-2) UNRELEASED; urgency=medium
   [ Christoph Berg ]
   * Simplify debian/rules. (Don't run dh_autoreconf, doesn't work yet.)
 
- -- Helmut Grohne <helmut@subdivi.de>  Sun, 24 Feb 2019 13:21:28 +0100
+ -- Christoph Berg <myon@debian.org>  Mon, 25 Feb 2019 11:18:48 +0100
 
 tenace (0.16-1) unstable; urgency=medium
 
