--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,14 @@
+tenace (0.16-3) UNRELEASED; urgency=medium
+
+  * Wrap long lines in changelog entries: 0.16-2.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 09:36:31 +0000
+
 tenace (0.16-2) unstable; urgency=medium
 
   [ Helmut Grohne ]
-  * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure. (Closes: #923147)
+  * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure.
+    (Closes: #923147)
 
   [ Christoph Berg ]
   * Simplify debian/rules. (Don't run dh_autoreconf, doesn't work yet.)
