--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tenace (0.16-3) UNRELEASED; urgency=medium
 
   * Wrap long lines in changelog entries: 0.16-2.
   * Bump debhelper from old 11 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 09:36:31 +0000
 
