--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.17-2) UNRELEASED; urgency=medium
+
+  * Fix board_window_init prototype. (Closes: #1097982)
+
+ -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2025 17:04:26 +0000
+
 tenace (0.17-1) unstable; urgency=medium
 
   [ Debian Janitor ]
