--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-tenace (0.17-2) UNRELEASED; urgency=medium
+tenace (0.18-1) unstable; urgency=medium
 
   * Fix board_window_init prototype. (Closes: #1097982)
   * Remove quotes from mailcap file. (Closes: #987416)
 
- -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2025 17:04:26 +0000
+ -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2025 17:06:43 +0000
 
 tenace (0.17-1) unstable; urgency=medium
 
